site/ref/style/general.css
/* CSS Document */

#container
{
	margin: 0px auto;
	text-align: justify;
	position: absolute;
	left: 0px;
	top: 0px;
	width: 940px;
}

.ligne {position: absolute;}

/* bandeau top */
#logo {top:0px; left:0px; width:940px; height:70px; }

/* page */

#image {top:70px; left:0px; width:300px; height:430px; background-color:black;  border-top:2px solid black; border-bottom:2px solid black;}
#bodytexte {top:70px; left:300px; width:640px; height:430px; border-top:2px solid black; border-bottom:2px solid black; border-right:2px solid black;}

/* barre menu */
#menu {top:510px; left:0px; width:940px; height:90px;}
#menuA {top:0px; left:320px; width:130px; height:90px; }
#menuATitre {top:0px; left:0px; width:130px; height:20px; }
#ssmenuA {top:20px; left:20px; width:120px; height:55px; border-left:1px solid black; visibility:hidden;}
#ssmenuATitreA {top:0px; left:10px; width:110px; height:20px;}
#ssmenuATitreB {top:20px; left:10px; width:110px; height:20px;}
#ssmenuATitreC {top:40px; left:10px; width:110px; height:20px;}

#menuB {top:0px; left:490px; width:140px; height:110px;}
#menuBTitre {top:0px; left:0px; width:140px; height:20px;}
#ssmenuB {top:20px; left:20px; width:120px; height:35px; border-left:1px solid black; visibility:hidden;}
#ssmenuBTitreA {top:0px; left:10px; width:120px; height:20px;}
#ssmenuBTitreB {top:20px; left:10px; width:120px; height:20px;}

#menuC {top:0px; left:690px; width:50px; height:60px;}
#menuCTitre {top:0px; left:0px; width:50px; height:20px;}
#ssmenuC {top:20px; left:10px; width:120px; height:55px; border-left:1px solid black; visibility:hidden;}
#ssmenuCTitreA {top:0px; left:10px; width:110px; height:20px;}
#ssmenuCTitreB {top:20px; left:10px; width:110px; height:20px;}
#ssmenuCTitreC {top:40px; left:10px; width:110px; height:20px;}

#menuE {top:0px; left:830px; width:50px; height:20px;}
#menuETitre {top:0px; left:0px; width:50px; height:20px;}
#signature {position: absolute; top:60px; left:760px; width:130px; height:10px;  visibility:hidden;}
#chil {position: absolute; top:50px; left:900px; width:20px; height:20px;}

#titre {top:10px; left:10px; width:500px; height:40px;}
#colonneA {top:60px; left:0px; width:280px; height:500px;}
#colonneB {top:60px; left:150px; width:250px; height:500px;}

#invit-texte  {position:absolute; top:20px; left:0px; width:640px; height:270px;}
#invit-titre1 {position:absolute; top:20px; left:0px; width:610px; height:80px;}
#invit-titre2 {position:absolute; top:70px; left:0px; width:600px; height:80px;}
#invit-titre3 {position:absolute; top:140px; left:0px; width:600px; height:70px;}
#invit-titre4 {position:absolute; top:180px; left:0px; width:600px; height:50px;}
#invit-photo  {position:absolute; top:270px; left:0px; width:640px; height:150px;}

#home-intro   {margin-top:440px; padding:0 20px 20px; color:#CCCCCC;}
#home-intro h2 {font-size:13px; color:#8A97B3; margin:16px 0 6px; font-family:Century Gothic,sans-serif;}
#home-intro p, #home-intro p.liste {color:#CCCCCC; font-size:11px; margin-left:0; margin-right:0;}

img{
border: 0px; 
}

h1,h2,h3,h4,h5,td,a,p,li,
{
font-family: Century gothic, sans-serif; 
}

h1 { margin-top:20px; margin-bottom:20px; margin-left : 20px; font-size: 16px; color:#9B1A1B; text-align: left; font-family: Century gothic, sans-serif; }

p
{
margin-top:0px;
margin-bottom:10px;
margin-left:20px;
margin-right:10px;
font-size: 12px;
text-align:justify;
font-family: Century gothic, sans-serif; 
}

p.home1 { margin-top:0px; margin-bottom:20px; margin-left : 0px; font-size: 10px; color:#9B1A1B; text-align: left; font-family: Century gothic, sans-serif; }
p.home2, h1.home2 { margin-top:0px; margin-bottom:20px; margin-right : 100px; font-size: 50px; color:#FFFFFF; text-align: right; font-family: Century gothic; font-weight: normal; }
p.home3, h2.home3 { margin-top:0px; margin-bottom:20px; margin-right : 110px; font-size: 24px; color:#8A97B3; text-align: right; font-family: Century gothic; font-weight: normal; }
p.home4, h3.home4 { margin-top:0px; margin-bottom:20px; margin-right : 40px; font-size: 14px; color:#FFFFFF; text-align: right; font-family: Century gothic; font-weight: normal; }

h1.title { margin-top:10px; margin-right:20px; margin-bottom:20px; margin-left:20px; font-size: 35px; color:#CCCCCC; text-align: right; font-family: Century gothic, sans-serif; }

h2
{
font-family: Century gothic, sans-serif; 
margin-left : 40px;
font-size: 14px;
color:black;
text-align: left;
}

h2.tele
{
font-family: Century gothic, sans-serif; 
margin-left : 0px;
font-size: 14px;
color:black;
text-align: left;
}

h3.menu
{
color:black;
margin-bottom:0px;
margin-top:0px;
margin-right:0px;
margin-left:0px;
font-size: 20px;
text-align: left;
font-family: Century gothic, sans-serif; 
}

h2.title
{
font-family: Century gothic, sans-serif; 
color:black;
margin-bottom:0px;
margin-top:30px;
margin-right:0px;
margin-left:0px;
font-size: 16px;
text-align: right;
}

h4
{
font-family: Century gothic, sans-serif; 
margin : 20px;
font-size: 12px;
color:white;
}


p.signature
{
text-align:right;
margin-top:0px;
margin-bottom:10px;
margin-left:0px;
margin-right:0px;
font-weight: bold;
color:#CCCCCC;
font-family: Century gothic, sans-serif; 
font-size: 10px;
}


p.liste
{
color:black;
font-size: 12px;
margin-right:20px;
margin-left:60px;
margin-bottom:10px;
text-align:justify;
font-family: Century gothic, sans-serif; 
}

p.colgauche
{
margin-top:0px;
margin-bottom:10px;
margin-left:0px;
margin-right:0px;
font-size: 12px;
text-align:left;
font-family: Century gothic, sans-serif; 
}

p.coldroite
{
color:#9B1A1B;
margin-top:0px;
margin-bottom:10px;
margin-left:0px;
margin-right:10px;
font-size: 14px;
text-align:right;
font-family: Century gothic, sans-serif; 
}

table{
border-collapse: collapse;
}

a
{
align:center;
font-size: 14px;
color:black;
text-decoration : none;
font-family: Century gothic, sans-serif;
}
a:hover { color: #9B1A1B;}

p.title
{
margin-top:10px;
margin-right:20px;
margin-bottom:20px;
margin-left : 20px;
font-size: 35px;
color:#CCCCCC;
text-align: right;
font-family: Century gothic, sans-serif; 
}

a.title
{
margin-top:0px;
margin-right:0px;
margin-bottom:0px;
margin-left : 0px;
font-size: 35px;
color:#CCCCCC;
font-family: Century gothic, sans-serif; 
}
a.title:hover { color: #CCCCCC; }

a.menu { align:center; font-size: 14px; color:black; text-decoration : none; font-family: Century gothic, sans-serif; }
a.menu:hover { color: #9B1A1B; }

a.ssmenu { align:center; font-size: 12px; color:#999999; text-decoration : none; font-family: Century gothic, sans-serif; }
a.ssmenu:hover { color: #8A97B3; }

a.mail
{
margin :40px;
font-size: 12px;
color: black;
text-decoration : none;
font-family: Century gothic, sans-serif; 
}

a.mail:hover
{
color:#9B1A1B;}

a.eskapad
{
margin :0px;
font-size: 12px;
color: #9B1A1B;
text-decoration : none;
font-family: Century gothic, sans-serif; 
}

a.eskapad:hover
{
color:black;}

a.coldroite
{
color:#8A97B3;
margin-top:0px;
margin-bottom:10px;
margin-left:0px;
margin-right:0px;
font-size: 14px;
text-align:right;
font-family: Century gothic, sans-serif; 
}

a.coldroite:hover
{
color: black;}

